# subliminal-learning

./: pyproject.toml
cfgs/preference_numbers/: open_model_cfgs.py
sl/: config.py
sl/finetuning/: services.py
