[project]
name = "sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=0.9.9",
    "loguru>=0.7.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0,<3.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "scipy>=1.9.0",
    "tokenizers>=0.19.0",
    "torch==2.9.0",
    "torchvision>=0.15.0",
]

[tool.setuptools]
packages = ["sl", "sl.external", "sl.llm", "sl.core", "sl.utils", "sl.evaluation", "sl.finetuning", "sl.datasets"]
package-dir = {"sl" = "sl"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "neovim>=0.3.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "ipdb>=0.13.13",
]
open_models = [
    "skypilot[runpod]>=0.10.0",
    "vllm==0.10.0",
    "unsloth>=2025.7.8",
    "unsloth-zoo>=2025.7.10",
]
